--- a/back_end/.env
+++ b/back_end/.env
@@ -7,3 +7,5 @@ SEND_EMAIL_CLIENT_SECRET=3rhgTbtJbIxDa91J0c3AU_Oz
 EMAIL=xiangqiverifier@gmail.com
 FACEBOOK_CLIENT_ID=172780971323499
 FACEBOOK_CLIENT_SECRET=3df6a1616a3acb223b129ce9c51b0a4f
+GOOGLE_CLIENT_ID=859947628571-1ghdg5n3dka6b0ihpb4qolpq565qd479.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=2xuJB_WloRQLdwuMIitRvxx6
