--- a/back_end/.env
+++ b/back_end/.env
@@ -9,3 +9,5 @@ FACEBOOK_CLIENT_ID=172780971323499
 FACEBOOK_CLIENT_SECRET=3df6a1616a3acb223b129ce9c51b0a4f
 GOOGLE_CLIENT_ID=859947628571-1ghdg5n3dka6b0ihpb4qolpq565qd479.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=2xuJB_WloRQLdwuMIitRvxx6
+GITHUB_CLIENT_ID=82217a1ddea69b6817c2
+GITHUB_CLIENT_SECRET=c3ab4a1370a3a639ba151fcd46d2f48c47119ed2
