--- a/back_end/.env
+++ b/back_end/.env
@@ -5,6 +5,7 @@ SEND_EMAIL_TOKEN=ya29.a0AfH6SMCEC5RZH7HpFf6aKvfMGGZTdzTeleDZwKhHlMGr3mxTkQ9Za8jP
 SEND_EMAIL_CLIENT_ID=864103951121-pcl52l3q0ll2laokk1agucgunihle117.apps.googleusercontent.com
 SEND_EMAIL_CLIENT_SECRET=beUlJePrf2MWIxZgpIE9Of00
 EMAIL=xiangqiverifier@gmail.com
+EMAIL_PASSWORD=cout<<"Fsociety2";
 FACEBOOK_CLIENT_ID=1648479088683857
 FACEBOOK_CLIENT_SECRET=98a1fb3b9849d46525c67452bd4b8a80
 GOOGLE_CLIENT_ID=859947628571-1ghdg5n3dka6b0ihpb4qolpq565qd479.apps.googleusercontent.com
