--- a/front_end/package.json
+++ b/front_end/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
+    "redux-batched-subscribe": "^0.1.6",
     "socket.io-client": "^3.1.1",
     "web-vitals": "^1.1.0"
   },
