--- a/back_end/package.json
+++ b/back_end/package.json
@@ -20,6 +20,7 @@
     "googleapis": "^67.1.1",
     "mongodb": "^3.6.4",
     "multer": "^1.4.2",
+    "newrelic": "^7.5.0",
     "nodemailer": "^6.5.0",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
