--- a/front_end/package.json
+++ b/front_end/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://huyatreides.github.io/cotuong",
   "name": "front_end",
   "version": "0.1.0",
   "private": true,
@@ -7,7 +8,6 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.0",
     "bootstrap": "^4.6.0",
-    "netlify-cli": "^3.18.2",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-avatar": "^3.10.0",
@@ -25,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -44,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
