--- a/back_end/.env
+++ b/back_end/.env
@@ -8,3 +8,4 @@ GOOGLE_CLIENT_ID=859947628571-1ghdg5n3dka6b0ihpb4qolpq565qd479.apps.googleuserco
 GOOGLE_CLIENT_SECRET=2xuJB_WloRQLdwuMIitRvxx6
 GITHUB_CLIENT_ID=82217a1ddea69b6817c2
 GITHUB_CLIENT_SECRET=c3ab4a1370a3a639ba151fcd46d2f48c47119ed2
+BASE_URL="https://co-tuong-online.herokuapp.com"
